@@ -3228,12 +3228,24 @@ public abstract class Element {
     /**
      * @return the element-type-specific icon image intended to be placed in the upper left
      * corner of the drawn element if being collapsed.
+     * @see #getMiniIcon()
      */
     public ImageIcon getIcon()
     {
     	return IconLoader.getIcon(57);
     }
     // END KGU#122 2016-01-03
+    // START KGU 2018-06-28
+    /**
+     * @return the element-type-specific somewhat smaller icon image intended to be used in
+     * Find & Replace dialog.
+     * @see #getIcon()
+     */
+    public ImageIcon getMiniIcon()
+    {
+    	return IconLoader.getIcon(10);
+    }
+    // END KGU 2018-0628
 
     // START KGU 2015-10-16: Some Root stuff properly delegated to the Element subclasses
     // (The obvious disadvantage is slightly reduced performance, of course)
