@@ -196,6 +196,18 @@ public class Forever extends Element implements ILoop {
 		return IconLoader.getIcon(61);
 	}
 	// END KGU#122 2016-01-03
+	// START KGU 2018-06-28
+    /**
+     * @return the element-type-specific somewhat smaller icon image intended to be used in
+     * Find & Replace dialog.
+     * @see #getIcon()
+     */
+	@Override
+    public ImageIcon getMiniIcon()
+    {
+    	return IconLoader.getIcon(14);
+    }
+    // END KGU 2018-06-28
 
 	// START KGU 2015-10-11: Merged with selectElementByCoord
 	@Override
