@@ -189,6 +189,18 @@ public class While extends Element implements ILoop {
 		return IconLoader.getIcon(62);
 	}
 	// END KGU#122 2016-01-03
+	// START KGU 2018-06-28
+    /**
+     * @return the element-type-specific somewhat smaller icon image intended to be used in
+     * Find & Replace dialog.
+     * @see #getIcon()
+     */
+	@Override
+    public ImageIcon getMiniIcon()
+    {
+    	return IconLoader.getIcon(15);
+    }
+    // END KGU 2018-06-28
 	
 	// START KGU 2015-10-11: Merged with seletElementByCoord, which had to be overridden as well for proper Comment popping
 	@Override
