@@ -51,6 +51,7 @@ Current development version: 3.28-05 (2018-06-29)
 - 05: Enh. #552: Option to decide for all diagrams on serial file actions,
       new opportunity to remove all diagrams from Arranger with few clicks <2>
 - 05: Enh. #489: C99 parser pushed forward (though a little quick and dirty) <2>
+- 05: Set of smaller selement icons for the tree view in Find&Replace <2>
 
 Version 3.28 (2018-02-18)
 - 01: Bugfix #445: Array index out of bounds errors on COBOL import <2>
